# TechMain_2020_Algo

./: .gitignore  README.md
module1/: CMakeLists.txt  main1_2.cpp  main2_2.cpp  main3_1.cpp  main4_1.cpp  main5_3.cpp  main6_4.cpp  main7_1.cpp  rk1_2.cpp  rk2_2.cpp
module2/: CMakeLists.txt  main1_2.cpp  main2_3.cpp  main3_2.cpp  main4_2.cpp  rk2_1.cpp  rk2_3.cpp  rk2_4.cpp
module3/: CMakeLists.txt  main1.cpp  main2.cpp  main3.cpp
