CMAKE_MINIMUM_REQUIRED(VERSION 3.14.3)
PROJECT(module2)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -Wpedantic")

ADD_EXECUTABLE(m1_2 main1_2.cpp)
ADD_EXECUTABLE(m2_3 main2_3.cpp)
ADD_EXECUTABLE(m3_2 main3_2.cpp)
ADD_EXECUTABLE(m4_2 main4_2.cpp)
ADD_EXECUTABLE(m5 main5.cpp)